fix: layout issue of add-menu page has been fixed

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,600;1,400;1,600&display=swap');
 
-:root {
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -10,19 +10,22 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer base {
+  body {
+    @apply font-sans;
+  }
+}
+
 @layer components {
-  .btn-primary {
-    @apply bg-blue-500 hover:bg-blue-400;
-  }
-
-  .btn-secondary {
-    @apply bg-gray-400 hover:bg-gray-300;
-  }
-
-  .btn-danger {
-    @apply bg-red-500 hover:bg-red-400;
-  }
   .container {
       @apply max-w-[77.5rem] mx-auto px-5 md:px-10 lg:px-16 xl:max-w-[87.5rem];
     }
+    
+}
+
+.table-container {
+  height: calc(100vh - 60px);
+  overflow-y: auto;
+  padding-top: 60px;
+  box-sizing: border-box;
 }
